--- a/src/main/resources/info.properties
+++ b/src/main/resources/info.properties
@@ -17,7 +17,7 @@ error.utente.required=l'utente non è presente
 #inserire driver mysql 5.7
 jdbc.stringConnection=jdbc:mysql://localhost:3306/albergo?autoReconnect=true&useSSL=false
 #&useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-jdbc.username=root
-jdbc.password=root
+jdbc.username=Albergo
+jdbc.password=password
 
 #aggiungere qui tutte le altre regole
