Aggiunta la colonna 'cognome' alla servlet registrazione.
Aggiunta la validazione sulla password.

Aggiunti messaggi di errore in resources/info.

--- a/src/main/resources/info.properties
+++ b/src/main/resources/info.properties
@@ -3,6 +3,11 @@ error.required=è obbligatorio.
 error.minlength=il numero di caratteri non può essere minore di
 error.maxlength=il numero di caratteri non può essere maggiore di
 error.range=non è compreso tra
+error.specialcharacter=deve contenere almeno un carattere speciale
+error.atleastonenumber=deve contenere almeno un numero
+error.atleastonesmall=deve contenere almeno una lettera minuscola
+error.atleastonebig=deve contenere almeno una lettera maiuscola
+error.nospaces=non deve contenere spazi
 error.data.oggi=la data di inizio corso è precedente a quella odierna
 error.data.esistente= la data inserita non esiste
 error.data.nascita= la data di nascita non può essere successiva alla data odierna
