--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,13 @@
 		<welcome-file>default.htm</welcome-file> <welcome-file>default.jsp</welcome-file> 
 		</welcome-file-list> -->
 
+<servlet>
+	<servlet-name>listaStanze</servlet-name>
+	<servlet-class>it.accenture.controller.ListaStanze</servlet-class>
+</servlet>
+	<servlet-mapping>
+		<servlet-name>listaStanze</servlet-name>
+		<url-pattern>/listaStanze</url-pattern>
+	</servlet-mapping>
+
 </web-app>
