--- a/src/main/resources/info.properties
+++ b/src/main/resources/info.properties
@@ -12,6 +12,9 @@ error.password=deve contenere almeno una lettera minuscola e una lettera maiusco
 error.data.oggi=la data di inizio corso è precedente a quella odierna
 error.data.esistente= la data inserita non esiste
 error.data.nascita= la data di nascita non può essere successiva alla data odierna
+error.data.checkinoggi=non puo' essere prima di oggi
+error.data.checkoutoggi=non puo' essere prima di oggi
+error.data.checkincheckout=non puo' essere dopo la data di check out
 error.type.double= deve essere un numero (il separatore cifre decimali deve essere il punto)
 error.type.long=deve essere un numero
 
