--- a/src/main/resources/info.properties
+++ b/src/main/resources/info.properties
@@ -1,5 +1,6 @@
 
 error.required=è obbligatorio.
+error.nonumeri=non deve contenere numeri
 error.minlength=il numero di caratteri non può essere minore di
 error.maxlength=il numero di caratteri non può essere maggiore di
 error.range=non è compreso tra
